# bevy_fanorona

./: .gitignore  Cargo.toml  README.md
docs/: README.md
docs/init/: README.md
docs/init/install/: README.md
docs/init/ios/: Cargo.toml  README.md  launch-simulator-x86.sh  launch-simulator.sh
docs/init/ios/src/: main.rs
docs/init/ios_touch_events/: .gitignore  Cargo.toml  README.md  Signing.toml  launch-devices.sh  launch.sh
docs/init/ios_touch_events/src/: main.rs
docs/init/r_2d/: Cargo.toml  README.md  launch-simulator-x86.sh  launch-simulator.sh
docs/init/two_d_shapes/: Cargo.toml  README.md  launch.sh
docs/init/two_d_shapes/src/: main.rs  two_d_shapes.rs
src/: main.rs
