[package]
name = "ios"
version = "0.1.0"
edition = "2021"
description = "iOS App"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Metadata used when generating an iOS APP, for example.
[package.metadata.bundle]
identifier = "com.valiha.fanorona"

[dependencies]
bevy = "0.10.1"
