[package]
name = "ios_touch_events"
version = "0.1.0"
edition = "2021"
description = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy_ui = "0.10.1"

# A custom ECS-driven UI framework
#bevy_ui = ["bevy_internal/bevy_ui", "bevy_core_pipeline", "bevy_text", "bevy_sprite"]

# Metadata used when generating an iOS APP, for example.
[package.metadata.bundle]
identifier = "com.valiha.fanorona"
