[package]
name = "r_2d"
version = "0.1.0"
edition = "2021"
description = "Fanorona App on iOS"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.bundle]
identifier = "com.valiha.fanorona"

[dependencies]
bevy = "0.10.1"
bevy_mod_gizmos = "0.4.0"
