[package]
name = "two_d_shapes"
version = "0.1.0"
edition = "2021"
description = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"

# Metadata used when generating an iOS APP, for example.
[package.metadata.bundle]
identifier = "com.valiha.fanorona"
